added media query to all apart from contactsales

--- a/index.html
+++ b/index.html
@@ -194,7 +194,6 @@
                     </li>
                     <li><a href="" class="text-icon">Pricing</a></li>
                     </ul>
-                    
             </div>
 
             <div class="right">
@@ -287,7 +286,7 @@
   <div class="card-body">
     <h5 class="card-title">Project launches</h5>
     <p class="card-text">Coordinate teams, tasks, and timelines to keep every launch on schedule.</p>
-    <a href="#" class="card-link">See project launches <i class="fa-solid fa-arrow-right"></i></a>
+    <a href="#" class="card-link last">See project launches <i class="fa-solid fa-arrow-right"></i></a>
   </div>
 </div>
 
@@ -309,7 +308,7 @@
 
         <div class="blue-recs">
 
-          <div class="rec1">
+          <div class="rec1 px-4">
   <div class="rec1-text">
     <h3 class="bigtext-rec1">More clarity and <br> accountability</h3>
     <p class="smalltext-rec1">
@@ -318,7 +317,7 @@
       with AI working alongside your teams.
     </p> 
     <div class="rec1-btn">
-      <button type="button" class="btn4 btn-lg">Learn about goals</button>
+      <button type="button" class="rec-btn btn-lg">Learn goals</button>
     </div>
   </div>
   <img src="./IMAGES/rec1 image.webp" alt="logo" class="rec1-image">
@@ -333,7 +332,7 @@
       and focused on high-value tasks.
     </p> 
     <div class="rec2-btn">
-      <button type="button" class="btn5 btn-lg">Meet Asana AI</button>
+      <button type="button" class="rec-btn btn-lg">Meet Asana AI</button>
     </div>
   </div>
   <img src="./IMAGES/rec2 image.webp" alt="logo" class="rec2-image">
@@ -402,7 +401,7 @@
 
 
   <!-- -------------carousel---------------->
-          <div class="scroll-arrow gap-4">
+          <div class="gap-4 carousel-arrow">
         <i class="fa-solid fa-arrow-left" data-bs-target="#customCarousel" data-bs-slide="prev"></i><i class="fa-solid fa-arrow-right" data-bs-target="#customCarousel" data-bs-slide="next"></i>
   </div>
 
