--- a/otherhtmlpages/goals-reporting.html
+++ b/otherhtmlpages/goals-reporting.html
@@ -221,16 +221,16 @@
                 Connect every team's work to company objectives, then track progress with real- <br>time data.
             </p>
             <div class="big-btn">
-                <button type="button" class="btn1 btn-lg">Get started</button>
-                <button type="button" class="btn2 btn-lg">Contact Sales</button>
+                <button type="button" class="btn1 btn-lg full">Get started</button>
+                <button type="button" class="btn2 btn-lg full">Contact Sales</button>
             </div>
         </div>
 
         <div class="align-strategy-red">
 
             <div class="big-btn2">
-            <button type="button" class="btn1 btn-lg">Drive strategy</button>
-            <button type="button" class="btn2 btn-lg">Get results</button>
+            <button type="button" class="btn1 btn-lg full">Drive strategy</button>
+            <button type="button" class="btn2 btn-lg full">Get results</button>
             </div>
 
             <div class="align-strategy-image-text">
@@ -258,7 +258,7 @@
       <div class="row both d-flex align-items-stretch text-md-start g-0">
         <!-- Left side (image + caption) -->
         <div class="carousel-img-text col-lg-4 mb-3 mb-md-0">
-          <img src="../IMAGES/xero-img.svg" class="img-fluid " alt="Slide 1 image">
+          <img src="../IMAGES/xero-img.svg" class="img-fluid mx-auto" alt="Slide 1 image">
           
           <div class="tiny-legible mt-5">
           <p class="tiny mt-2">Company Size</p>
