--- a/otherhtmlpages/latest-feature.html
+++ b/otherhtmlpages/latest-feature.html
@@ -217,8 +217,8 @@
             <div class="summer-text">
                 <h1>Summer 2025 release</h1>
                 <p>Launch AI workflows tailored to your team’s needs, built for scale and security. <br> Watch the webinar to learn more.</p>
-                <button type="button" class="summer-btn1 btn-lg">watch the recording</button>
-                <button type="button" class="summer-btn2 btn-lg">download the release kit</button>
+                <button type="button" class="summer-btn1 btn-lg full">watch the recording</button>
+                <button type="button" class="summer-btn2 btn-lg full">download the release kit</button>
             </div>
 
             <div class="ratio ratio-21x9">
