--- a/otherhtmlpages/downloadapp.html
+++ b/otherhtmlpages/downloadapp.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Download</title>
+    <title>Download-app</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=language" />
@@ -218,7 +218,7 @@
                 <div class="desktop-text">
                     <p class="version">VERSION 2.4.1</p>
                     <h1>Asana for desktop: a more focused experience</h1>
-                    <p>Asana's desktop app removes distractions so you can focus on what's important.</p>
+                    <p class="version-small">Asana's desktop app removes distractions so you can focus on what's important.</p>
                     <button type="button" class="desktop-btn btn-lg">Download now</button>
                 </div>
                 <div class="desktop-image">
