added the correct link of goals and reporting

--- a/otherhtmlpages/downloadapp.html
+++ b/otherhtmlpages/downloadapp.html
@@ -40,7 +40,7 @@
                             <p class="title">Capabilities</p>
                             <ul>
                               <li><a href="">AI Studio</a></li>
-                              <li><a href="./otherhtmlpages/goals-reporting.html">Goals and reporting</a></li>
+                              <li><a href="./goals-reporting.html">Goals and reporting</a></li>
                               <li><a href="">Resource management</a></li>
                               <li><a href="">App integrations</a></li>
                             </ul>
