adjusted the video and footer

--- a/otherhtmlpages/latest-feature.html
+++ b/otherhtmlpages/latest-feature.html
@@ -231,7 +231,7 @@
             </div>
 
             <div class="ratio ratio-21x9">
-                <video src="../VIDEO/latest feature video 1.mp4" class="w-100 h-100 d-block object-fit-cover" loop autoplay muted></video>
+                <video src="../VIDEO/latest feature video 1.mp4" class="w-100 h-100 d-block object-fit-cover" loop autoplay muted playsinline webkit-playsinline></video>
             </div>
 
             <div class="three-grid">
