--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
         
         <div class="ratio ratio-21x9">
-          <video src="./VIDEO/asana video 1.mp4" class="object-fit-cover" loop autoplay muted></video>
+          <video src="./VIDEO/asana video 1.mp4" class="object-fit-cover" loop autoplay muted playsinline webkit-playsinline></video>
         </div>
 
     </div>
